# openapi.yml
@@ -26,57 +26,6 @@ paths:
                 example:
                   project_name: BackendBase
                   environment: dev
-  /user/{user_id}:
-    get:
-      summary: Get user profile
-      tags:
-        - user
-      parameters:
-        - in: path
-          name: user_id
-          required: true
-          schema:
-            type: integer
-      responses:
-        '200':
-          description: User found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/User'
-        '404':
-          description: User not found
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  detail:
-                    type: string
-                example:
-                  detail: User not found
-  /user:
-    post:
-      summary: Create user
-      tags:
-        - user
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/UserCreateRequest'
-            example:
-              username: pedro
-              name: Pedro Example
-              email: pedro@example.com
-      responses:
-        '201':
-          description: Created
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/User'
   /herramientas:
     post:
       summary: Create tool
